<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.spicytomato.javastructrueexperiment_3.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectFragment">

        <Button
            android:id="@+id/buttonPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pre"
            app:layout_constraintBottom_toTopOf="@+id/buttonBack"
            app:layout_constraintEnd_toEndOf="@+id/buttonBack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/buttonPre" />

        <Button
            android:id="@+id/buttonIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/buttonPreTraverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pre_traverse"
            app:layout_constraintBottom_toTopOf="@+id/buttonPre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonInTraverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_in_traverse"
            app:layout_constraintBottom_toTopOf="@+id/buttonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPre"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonInTraverse"
            app:srcCompat="@drawable/ic_home_black_24dp"
            android:contentDescription="TODO" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>